third_party/move/move-compiler-v2/tests/checking-lang-v2.4/specs/behavior_predicates_parse_err.exp

Diagnostics:
error: unexpected token
   ┌─ tests/checking-lang-v2.4/specs/behavior_predicates_parse_err.move:11:36
   │
11 │         ensures requires_of<f(x, y);
   │                                    ^
   │                                    │
   │                                    Unexpected ';'
   │                                    Expected '>'
